# Schiffbruch

./: .appveyor.yml  .gitignore  Action.hpp  Application.cpp  CMakeLists.txt  Direct.cpp  Game.cpp  Game.hpp  LICENSE  Landscape.001  Landscape.cpp  Landscape.dsp  Landscape.dsw  Landscape.opt  Landscape.plg  Landscape.rc  Landscape.sln  Landscape.vcxproj  Landscape.vcxproj.filters  README.md  Renderer.cpp  Routing.cpp  Sound.cpp  World.cpp  constants.hpp  ddutil.cpp  headers.hpp  miniwin.h  resource.h  windows.h
.github/workflows/: ci.yml  cmake.yml
doc/: anleitung.html  liesdies.doc
miniwin/: com.h  ddraw.cpp  ddraw.h  devilution.h  dsound.cpp  dx.cpp  dx.h  misc.cpp  misc.h  misc_io.cpp
miniwin/com/: ddraw.inc
src/: Action.cpp  Action.hpp  Application.cpp  Application.hpp  Direct.cpp  Direct.hpp  Game.cpp  Game.hpp  Landscape.rc  Math.cpp  Math.hpp  Menu.hpp  Renderer.cpp  Renderer.hpp  Routing.cpp  Routing.hpp  Schiffbruch.rc  Sound.cpp  Sound.hpp  State.hpp  World.cpp  World.hpp  constants.hpp  ddutil.cpp  ddutil.h  extern.hpp  globals.cpp  headers.hpp  main.cpp  resource.h  strings  strings.cpp  strings.h  strings_de.cpp  strings_en.cpp  types.cpp  types.hpp
tools/resgen/: CMakeLists.txt  main.cpp
